src/objects/Opportunity_Information__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Field from Opportunity: Lead Source</description>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar &amp; Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar &amp; Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Field Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>servIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_ID__c</fullName>
        <description>Created as part of R5-2279</description>
        <externalId>true</externalId>
        <label>Legacy Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: Local_Business_Unit</description>
        <label>Local Business Unit</label>
        <referenceTo>LBU_Code__c</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Currency_m__c</fullName>
        <description>Field from Opportunity: CurrencyIsoCode</description>
        <label>Opportunity Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_m__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to &apos;Name&apos;</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_m__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: Opportunity_owner</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Screening_Disqualified__c</fullName>
        <formula>IF( OR( ISPICKVAL( Opportunity_Name_m__r.Opportunity_Qualification_Status__c , &apos;NO BID&apos;), ISPICKVAL( Opportunity_Name_m__r.Opportunity_Screening_Gate_2_Status__c , &apos;NO BID&apos;)  ) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This check-box indicates if this opportunity was given a “No Bid” decision in opportunity qualification or tender screening.</inlineHelpText>
        <label>Opportunity Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Winner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be filled out in case the opportunity was lost against a competitor</description>
        <label>Opportunity Winner</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Information (Opportunity Winner)</relationshipLabel>
        <relationshipName>Opportunity_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: Product_Group</description>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFQ_Issue_Date__c</fullName>
        <description>Date when the RFQ was issued</description>
        <label>RFQ Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Pursuit_Progress__c</fullName>
        <description>Field from Opportunity: Sales_Pursuit_Progress</description>
        <label>Sales Pursuit Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Is Captured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Pursuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold (Pursuit)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Proposal Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Preference To Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold (Bidding)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Presented To Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Proposal Submitted (Bidding)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Is Neutral To Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Preference To ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold (Negotiation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOI To Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Buying Preference To Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Position Is Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear Buying Signal To ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB Preferred &amp; Shows Clear Signals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOI To ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED Lost Without ABB Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Consortium_Value__c</fullName>
        <description>Created as part of R5-2295</description>
        <label>Total Consortium Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Name_m__c</columns>
        <columns>Sales_Pursuit_Progress__c</columns>
        <columns>Account_End_User_m__c</columns>
        <columns>End_User_Project__c</columns>
        <columns>Local_Business_Unit__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Industry_Usage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OI-{0000000}</displayFormat>
        <label>Opportunity Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>